fix(entity): The user table has been changed